--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <header>
+        <h1>John Doe</h1>
+        <p>Développeur Web</p>
+    </header>
+
+    <section id="about">
+        <h2>À propos de moi</h2>
+        <p>Je suis un développeur web passionné par la création d'expériences en ligne.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Compétences</h2>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <!-- Ajoutez vos compétences ici -->
+        </ul>
+    </section>
+
+    <section id="projects">
+        <h2>Projets</h2>
+        <div class="project">
+            <h3>Nom du Projet 1</h3>
+            <p>Description du projet. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="project">
+            <h3>Nom du Projet 2</h3>
+            <p>Description du projet. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <!-- Ajoutez vos projets ici -->
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: john.doe@example.com</p>
+        <p>LinkedIn: linkedin.com/in/johndoe</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 John Doe - Portfolio</p>
+    </footer>
+
 </body>
 </html>
